# point_cloud_proc

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: default.yaml  default_config.yaml  pick_place.yaml  robocup_montreal.yaml  tabletop_rviz.rviz
include/point_cloud_proc/: point_cloud_proc.h
include/point_cloud_tools/: point_cloud_tools.h
launch/: octomap_node.launch  octomap_server.launch
msg/: Mesh.msg  Object.msg  Objects.msg  Plane.msg  PlaneObject.msg  PlaneObjects.msg  Planes.msg  Triangle.msg
nodes/: cluster_objects.cpp
src/: point_cloud_frame_pub.cpp  point_cloud_proc.cpp  point_cloud_tools.cpp  point_cloud_tools_back.cpp  test_pcp.cpp
srv/: MultiPlaneSegmentation.srv  SinglePlaneSegmentation.srv  TabletopClustering.srv  TabletopExtraction.srv
tests/: test_multi_plane.cpp  test_single_plane.cpp  test_tabletop_cluster.cpp
